styles.css
@font-face {
    font-family: 'pixel';
    src: url('fonts/subset-pixel.woff2') format('woff2'),
        url('fonts/subset-pixel.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
    
}

html {
    -webkit-font-smoothing: none;
    -moz-osx-font-smoothing: unset;
}

body {
    font-family: Arial, sans-serif;
    text-align: center;    
    color: lime;
    background-color: black;
    -webkit-font-smoothing: none;
    -moz-osx-font-smoothing: unset;
}

p {
    margin: 0.5em 1em 0.5em 1em;
    font-size: 1.2em;
}

button, input {
    color: lime;
    text-align: center;
    border: .3rem solid lime;
    background-color: transparent;
    font-size: 2rem;
    padding: .25em;
    margin: .15em;   
    min-width: 6ch;
}


#raise-input {
    width: 6ch;
}

.clickable:active, button:active {
    transform: scale(0.95); /* Slightly shrink the button */

}

a {
    color: lime;
    font-size: 1.2em;
    margin: 10%;
}


#game {
    height: 90vh;
    padding: 2px;
    margin-top: 5vh;
    display: flex;
    align-items: flex-start;
    justify-content: center;

}

#flex-stack {
    display: flex;
    flex-direction: column;
}

#flex-row {
    display: flex;
    flex-direction: row;
}

#loading-div, #main-menu, #matchmaking-stack {
    height: 90vh;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: center;
    text-align: center;

}

#main-menu {
    justify-content: flex-start;
}

#poker-wrapper {
    display: flex;
    flex-direction: row;
    min-height: 90vh;
    min-width: 85%;
    margin: 0px;
}

#poker-stack, #player-stack {
    display: flex;
    flex-direction: column;
}

#player-stack {
    flex: .33;
}

#poker-stack {
    flex: .66;
    margin-left: 8px;
    border: .3rem solid lime;
}

#player-info-div {
    border: .3rem solid lime;
    margin-bottom: 8px;
    text-align: left;
    padding: .35rem;
    max-height: 100%;
}

#player-info, #chat-div {
    margin: .5rem;
    overflow: auto;
}

#chat-stack {
    display: flex;
    flex-direction: column;
    border: .3rem solid lime;
    flex: 1;
}

#chat-div {
    flex: 1;
}

#chat-input-div {
    display: flex;
}

#chat-input {
    font-size: 2rem;
    text-align: left;
    width: 100%;
}

#chat-send {
    width: 6ch;
}

#card-div {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex: 1;
}

#river-div, #hole-div {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

#hole-div {
    margin-top: 3vh;
}

#spacer {
    flex: 1;
}


#turn-indicator {
    height: 2rem;
    margin: 1vh;
}

.cards {
    width: 12rem;
    margin: .25rem;
}

